css/my-app.css
@font-face {
  font-family: 'Material Icons';
  font-style: normal;
  font-weight: 400;
  src: url(../fonts/MaterialIcons-Regular.eot); /* For IE6-8 */
  src: local('Material Icons'),
       local('MaterialIcons-Regular'),
       url(../fonts/MaterialIcons-Regular.woff2) format('woff2'),
       url(../fonts/MaterialIcons-Regular.woff) format('woff'),
       url(../fonts/MaterialIcons-Regular.ttf) format('truetype');
}

.material-icons {
  font-family: 'Material Icons';
  font-weight: normal;
  font-style: normal;
  font-size: 24px;  /* Preferred icon size */
  display: inline-block;
  line-height: 1;
  text-transform: none;
  letter-spacing: normal;
  word-wrap: normal;
  white-space: nowrap;
  direction: ltr;

  /* Support for all WebKit browsers. */
  -webkit-font-smoothing: antialiased;
  /* Support for Safari and Chrome. */
  text-rendering: optimizeLegibility;

  /* Support for Firefox. */
  -moz-osx-font-smoothing: grayscale;

  /* Support for IE. */
  font-feature-settings: 'liga';
}

@font-face {
  font-family: 'Framework7 Icons';
  font-style: normal;
  font-weight: 400;
  src: url("../fonts/Framework7Icons-Regular.eot");
  src: url("../fonts/Framework7Icons-Regular.woff2") format("woff2"),
       url("../fonts/Framework7Icons-Regular.woff") format("woff"),
       url("../fonts/Framework7Icons-Regular.ttf") format("truetype");
}

.f7-icons {
  font-family: 'Framework7 Icons';
  font-weight: normal;
  font-style: normal;
  font-size: 25px;
  line-height: 1;
  letter-spacing: normal;
  text-transform: none;
  display: inline-block;
  white-space: nowrap;
  word-wrap: normal;
  direction: ltr;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-feature-settings: "liga";
  -moz-font-feature-settings: "liga=1";
  -moz-font-feature-settings: "liga";
  font-feature-settings: "liga";
  text-align: center;
}

.doroll {}
.addroll {}
.showhistory {}
.managepreset {}
.preset-list {}
.dohistory {}
.doerasehistory {}
.doeraseallhistory {}
.back-nav {}
.more-nav {}
.home-nav {}
.preset-accordion {}

.panel-header {
	margin:0px;
	padding:0px;
}

.dice-table {
	width: 80%; 
    margin-left: 10%; 
    margin-right: 10%;
	margin-top:0;
	border-spacing: 0.5cm;
}
.count-table {
	border-spacing: 0;
}
.table-col {
	background-image:url("");
	background-size:100% 100%;
	vertical-align:middle;
	text-align:center;
	height:20vw;
	width:33%;
}

.force-height {
	height:20vw;
}

.rotated90 {
	filter: progid: DXImageTransform.Microsoft.BasicImage(rotation=0.5);
	-webkit-transform: rotate(180deg);
	-moz-transform: rotate(180deg);
	-ms-transform: rotate(180deg);
	-o-transform: rotate(180deg);
	transform: rotate(180deg);
}

#D2 {
	background-image:url("../img/D2.svg");
}

#D4 {
	background-image:url("../img/D4.svg");
}

#D6 {
	background-image:url("../img/D6.svg");
}

#D8 {
	background-image:url("../img/D8.svg");
}

#D10 {
	background-image:url("../img/D10.svg");
}

#D12 {
	background-image:url("../img/D12.svg");
}

#D20 {
	background-image:url("../img/D20.svg");
}

#D100 {
	background-image:url("../img/D100.svg");
}

#D2ios {
	background-image:url("../img/D2-ios.svg");
}

#D4ios {
	background-image:url("../img/D4-ios.svg");
}

#D6ios {
	background-image:url("../img/D6-ios.svg");
}

#D8ios {
	background-image:url("../img/D8-ios.svg");
}

#D10ios {
	background-image:url("../img/D10-ios.svg");
}

#D12ios {
	background-image:url("../img/D12-ios.svg");
}

#D20ios {
	background-image:url("../img/D20-ios.svg");
}

#D100ios {
	background-image:url("../img/D100-ios.svg");
}

.center {
	text-align: center;
}

.special {
	width:100%;
	height:100%;
	font-family: inherit;
	font-size:23px;
}

.dice-icon {
	background-size:100% 100%;
	background-image:url("");
	background-repeat:no-repeat;
	vertical-align:middle;
	text-align:center;
	line-height:3em;
	width:3em;
	height:3em;
	margin-left:0.5em;
	margin-top:0.5em;
	float:left;
}

.dice-icon-history {
	background-size:100% 100%;
	background-image:url("");
	background-repeat:no-repeat;
	vertical-align:middle;
	text-align:center;
	line-height:1.5em;
	width:1.5em;
	height:1.5em;
	margin-left:0;
	margin-top:0;
	float:left;
}

.d2-icon {
	background-image:url("../img/D2-nofill.svg");
}

.d4-icon {
	background-image:url("../img/D4-nofill.svg");
}

.d6-icon {
	background-image:url("../img/D6-nofill.svg");
}

.d8-icon {
	background-image:url("../img/D8-nofill.svg");
}

.d10-icon {
	background-image:url("../img/D10-nofill.svg");
}

.d12-icon {
	background-image:url("../img/D12-nofill.svg");
}

.d20-icon {
	background-image:url("../img/D20-nofill.svg");
}

.d100-icon {
	background-image:url("../img/D100-nofill.svg");
}

